# fast-api-auth

./: Makefile  pyproject.toml  readme.md
backend/: Dockerfile  docker-compose.yml  pyproject.toml  readme.md
backend/src/app/: main.py
backend/src/app/alembic/: env.py
backend/src/app/alembic/versions/: 48b8d0cfbac6_initial_migration.py
backend/src/app/api/: auth.py
backend/src/app/schema/: user.py
backend/src/app/service/: auth_service.py  jwtauth.py  user_service.py
frontend/auth/: Dockerfile  package-lock.json  package.json
frontend/auth/src/: App.js  index.js
frontend/auth/src/components/: Home.js  Login.js  Register.js
src/app/: alembic.ini  main.py
src/app/models/: db.py  models.py
src/app/schema/: user.py
src/app/service/: jwtauth.py  user_service.py
